removed unwanted files