@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>unittests</artifactId>
   <groupId>org.cishell.plugins</groupId>
@@ -11,66 +10,72 @@
     <!-- Below module Fix me -->
     <!-- <module>edu.iu.nwb.converter.nwbgraphml.tests</module> -->
     <module>edu.iu.nwb.util.tests</module>
-<!-- CNS -->
-	<module>edu.iu.cns.database.merge.generic.tests</module>
-	<module>edu.iu.cns.visualization.tests</module>
-<!-- Sci2 -->
-	<module>edu.iu.sci2.visualization.geomaps.tests</module>
-	<module>edu.iu.sci2.visualization.bipartitenet.tests</module>
-	<module>edu.iu.sci2.visualization.scimaps.tests</module>
-	<module>edu.iu.sci2.database.isi.load.tests</module>
-	<module>edu.iu.sci2.database.isi.load.integration.tests</module>
-	<module>edu.iu.sci2.visualization.temporalbargraph.tests</module>
-	<module>edu.iu.sci2.medline.test</module>
-	<module>edu.iu.sci2.database.isi.extract.tests</module>
+    <!-- CNS -->
+    <module>edu.iu.cns.database.merge.generic.tests</module>
+    <module>edu.iu.cns.visualization.tests</module>
+    <!-- Sci2 -->
+    <module>edu.iu.sci2.visualization.geomaps.tests</module>
+    <module>edu.iu.sci2.visualization.bipartitenet.tests</module>
+    <module>edu.iu.sci2.visualization.scimaps.tests</module>
+    <module>edu.iu.sci2.database.isi.load.tests</module>
+    <module>edu.iu.sci2.database.isi.load.integration.tests</module>
+    <module>edu.iu.sci2.visualization.temporalbargraph.tests</module>
+    <module>edu.iu.sci2.medline.test</module>
+    <module>edu.iu.sci2.database.isi.extract.tests</module>
 
-	<module>edu.iu.sci2.testutilities</module>
-  </modules> 
+    <module>edu.iu.sci2.testutilities</module>
+  </modules>
+
+  <properties>
+    <tychoVersion>0.18.1</tychoVersion>
+    <memoryOptions1>-Xms512m -Xmx1024m -XX:PermSize=256m</memoryOptions1>
+    <memoryOptions2>-XX:MaxPermSize=256m</memoryOptions2>
+  </properties>
   <build>
-		<plugins>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-surefire-plugin</artifactId>
-				<version>${tychoVersion}</version>
-				<configuration>
-					<dependencies>
-						<dependency>
-							<type>eclipse-feature</type>
-							<artifactId>org.cishell.environment.equinox.feature</artifactId>
-							<version>0.0.0</version>
-						</dependency>
-						<dependency>
-							<type>eclipse-feature</type>
-							<artifactId>org.cishell.reference.feature</artifactId>
-							<version>0.0.0</version>
-						</dependency>
-						<dependency>
-							<type>eclipse-feature</type>
-							<artifactId>org.cishell.feature</artifactId>
-							<version>0.0.0</version>
-						</dependency>
-					</dependencies>
-					<bundleStartLevel>
-						<bundle>
-							<id>org.eclipse.equinox.metatype</id>
-							<level>4</level>
-							<autoStart>true</autoStart>
-						</bundle>
-						<bundle>
-							<id>org.cishell.service.autostart</id>
-							<level>4</level>
-							<autoStart>true</autoStart>
-						</bundle>
-						<bundle>
-							<id>org.eclipse.equinox.log</id>
-							<level>4</level>
-							<autoStart>true</autoStart>
-						</bundle>
-					</bundleStartLevel>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+    <plugins>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-surefire-plugin</artifactId>
+        <version>${tychoVersion}</version>
+        <configuration>
+          <dependencies>
+            <dependency>
+              <type>eclipse-feature</type>
+              <artifactId>org.cishell.environment.equinox.feature</artifactId>
+              <version>0.0.0</version>
+            </dependency>
+            <dependency>
+              <type>eclipse-feature</type>
+              <artifactId>org.cishell.reference.feature</artifactId>
+              <version>0.0.0</version>
+            </dependency>
+            <dependency>
+              <type>eclipse-feature</type>
+              <artifactId>org.cishell.feature</artifactId>
+              <version>0.0.0</version>
+            </dependency>
+          </dependencies>
+          <bundleStartLevel>
+            <bundle>
+              <id>org.eclipse.equinox.metatype</id>
+              <level>4</level>
+              <autoStart>true</autoStart>
+            </bundle>
+            <bundle>
+              <id>org.cishell.service.autostart</id>
+              <level>4</level>
+              <autoStart>true</autoStart>
+            </bundle>
+            <bundle>
+              <id>org.eclipse.equinox.log</id>
+              <level>4</level>
+              <autoStart>true</autoStart>
+            </bundle>
+          </bundleStartLevel>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
   <parent>
     <groupId>org.cishell</groupId>
     <artifactId>plugins</artifactId>
